# GridPatternMaker

./: .cproject  .project  CMakeLists.txt  INSTALL  LICENSE  README.md  make_linux_bin_release.sh  make_win32_bin_release.bat  make_win64_bin_release.bat
examples/: 20x20.gpm  20x20_scatter.gpm  checks.gpm  colour.gpm  colour_circles.gpm  leaf.gpm  leaf_colour.gpm  rose.gpm  rose_with_leaf.gpm  special.gpm  v.gpm  x.gpm
res/: addc.xcf  addr.xcf  bg.xcf  cl.xcf  colour1.xcf  colour2.xcf  colour3.xcf  colour4.xcf  colour5.xcf  colour6.xcf  ln1.xcf  load.xcf  remc.xcf  remr.xcf  sa.xcf  sq1.xcf  sq2.xcf  sq3.xcf  sq4.xcf  sq5.xcf  sq6.xcf
src/: Frontend.cpp  Frontend.hpp  Grid.hpp  wxCtrlsApp.cpp  wxCtrlsApp.hpp
src/cmake_modules/: FindSDL2.cmake
